sdk/opendp/smartnoise/xpath/parser/XPathParser.py
# Generated from XPath.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class XPathParser ( Parser ):

    grammarFileName = "XPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'//'", "'['", "']'", "'@*'", "<INVALID>", 
                     "'<=>'", "'<>'", "'!='", "'<'", "<INVALID>", "'>'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", 
                     "'&'", "'|'", "'||'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "EQ", "NSEQ", "NEQ", "NEQJ", "LT", "LTE", 
                      "GT", "GTE", "PLUS", "MINUS", "ASTERISK", "SLASH", 
                      "PERCENT", "TILDE", "AMPERSAND", "PIPE", "CONCAT_PIPE", 
                      "HAT", "TRUE", "FALSE", "NULL", "STRING", "INTEGER_VALUE", 
                      "DECIMAL_VALUE", "ATTRIBUTE", "IDENTIFIER", "LETTER", 
                      "WS", "SPACE" ]

    RULE_statement = 0
    RULE_innerStatement = 1
    RULE_childSelector = 2
    RULE_rootSelector = 3
    RULE_rootDescendantSelector = 4
    RULE_descendantSelector = 5
    RULE_booleanSelector = 6
    RULE_indexSelector = 7
    RULE_allSelect = 8
    RULE_allNodes = 9
    RULE_allAttributes = 10
    RULE_comparisonOperator = 11
    RULE_booleanValue = 12
    RULE_allExpression = 13
    RULE_literal = 14
    RULE_number = 15

    ruleNames =  [ "statement", "innerStatement", "childSelector", "rootSelector", 
                   "rootDescendantSelector", "descendantSelector", "booleanSelector", 
                   "indexSelector", "allSelect", "allNodes", "allAttributes", 
                   "comparisonOperator", "booleanValue", "allExpression", 
                   "literal", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    EQ=5
    NSEQ=6
    NEQ=7
    NEQJ=8
    LT=9
    LTE=10
    GT=11
    GTE=12
    PLUS=13
    MINUS=14
    ASTERISK=15
    SLASH=16
    PERCENT=17
    TILDE=18
    AMPERSAND=19
    PIPE=20
    CONCAT_PIPE=21
    HAT=22
    TRUE=23
    FALSE=24
    NULL=25
    STRING=26
    INTEGER_VALUE=27
    DECIMAL_VALUE=28
    ATTRIBUTE=29
    IDENTIFIER=30
    LETTER=31
    WS=32
    SPACE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def innerStatement(self):
            return self.getTypedRuleContext(XPathParser.InnerStatementContext,0)


        def EOF(self):
            return self.getToken(XPathParser.EOF, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = XPathParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.innerStatement()
            self.state = 33
            self.match(XPathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def childSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.ChildSelectorContext)
            else:
                return self.getTypedRuleContext(XPathParser.ChildSelectorContext,i)


        def rootSelector(self):
            return self.getTypedRuleContext(XPathParser.RootSelectorContext,0)


        def rootDescendantSelector(self):
            return self.getTypedRuleContext(XPathParser.RootDescendantSelectorContext,0)


        def indexSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.IndexSelectorContext)
            else:
                return self.getTypedRuleContext(XPathParser.IndexSelectorContext,i)


        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(XPathParser.SLASH)
            else:
                return self.getToken(XPathParser.SLASH, i)

        def descendantSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.DescendantSelectorContext)
            else:
                return self.getTypedRuleContext(XPathParser.DescendantSelectorContext,i)


        def getRuleIndex(self):
            return XPathParser.RULE_innerStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInnerStatement" ):
                listener.enterInnerStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInnerStatement" ):
                listener.exitInnerStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerStatement" ):
                return visitor.visitInnerStatement(self)
            else:
                return visitor.visitChildren(self)




    def innerStatement(self):

        localctx = XPathParser.InnerStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_innerStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.T__3, XPathParser.ASTERISK, XPathParser.ATTRIBUTE, XPathParser.IDENTIFIER]:
                self.state = 35
                self.childSelector()
                pass
            elif token in [XPathParser.SLASH]:
                self.state = 36
                self.rootSelector()
                pass
            elif token in [XPathParser.T__0]:
                self.state = 37
                self.rootDescendantSelector()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XPathParser.T__0) | (1 << XPathParser.T__1) | (1 << XPathParser.SLASH))) != 0):
                self.state = 45
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [XPathParser.T__1]:
                    self.state = 40
                    self.indexSelector()
                    pass
                elif token in [XPathParser.SLASH]:
                    self.state = 41
                    self.match(XPathParser.SLASH)
                    self.state = 42
                    self.childSelector()
                    pass
                elif token in [XPathParser.T__0]:
                    self.state = 43
                    self.match(XPathParser.T__0)

                    self.state = 44
                    self.descendantSelector()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChildSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_childSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChildSelector" ):
                listener.enterChildSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChildSelector" ):
                listener.exitChildSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChildSelector" ):
                return visitor.visitChildSelector(self)
            else:
                return visitor.visitChildren(self)




    def childSelector(self):

        localctx = XPathParser.ChildSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_childSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 50
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 51
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 52
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 55
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def SLASH(self):
            return self.getToken(XPathParser.SLASH, 0)

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_rootSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootSelector" ):
                listener.enterRootSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootSelector" ):
                listener.exitRootSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootSelector" ):
                return visitor.visitRootSelector(self)
            else:
                return visitor.visitChildren(self)




    def rootSelector(self):

        localctx = XPathParser.RootSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rootSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(XPathParser.SLASH)
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 59
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 60
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 61
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 64
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootDescendantSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_rootDescendantSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootDescendantSelector" ):
                listener.enterRootDescendantSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootDescendantSelector" ):
                listener.exitRootDescendantSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootDescendantSelector" ):
                return visitor.visitRootDescendantSelector(self)
            else:
                return visitor.visitChildren(self)




    def rootDescendantSelector(self):

        localctx = XPathParser.RootDescendantSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rootDescendantSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(XPathParser.T__0)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 68
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 69
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 70
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 73
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescendantSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_descendantSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescendantSelector" ):
                listener.enterDescendantSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescendantSelector" ):
                listener.exitDescendantSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescendantSelector" ):
                return visitor.visitDescendantSelector(self)
            else:
                return visitor.visitChildren(self)




    def descendantSelector(self):

        localctx = XPathParser.DescendantSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_descendantSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 76
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 77
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 78
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 81
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # InnerStatementContext
            self.op = None # ComparisonOperatorContext
            self.rlit = None # LiteralContext
            self.stmt = None # InnerStatementContext
            self.llit = None # LiteralContext

        def innerStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.InnerStatementContext)
            else:
                return self.getTypedRuleContext(XPathParser.InnerStatementContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(XPathParser.ComparisonOperatorContext,0)


        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.LiteralContext)
            else:
                return self.getTypedRuleContext(XPathParser.LiteralContext,i)


        def getRuleIndex(self):
            return XPathParser.RULE_booleanSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanSelector" ):
                listener.enterBooleanSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanSelector" ):
                listener.exitBooleanSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanSelector" ):
                return visitor.visitBooleanSelector(self)
            else:
                return visitor.visitChildren(self)




    def booleanSelector(self):

        localctx = XPathParser.BooleanSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_booleanSelector)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(XPathParser.T__1)

                self.state = 85
                localctx.left = self.innerStatement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XPathParser.EQ) | (1 << XPathParser.NEQ) | (1 << XPathParser.NEQJ) | (1 << XPathParser.LT) | (1 << XPathParser.LTE) | (1 << XPathParser.GT) | (1 << XPathParser.GTE))) != 0):
                    self.state = 86
                    localctx.op = self.comparisonOperator()
                    self.state = 89
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [XPathParser.MINUS, XPathParser.TRUE, XPathParser.FALSE, XPathParser.NULL, XPathParser.STRING, XPathParser.INTEGER_VALUE, XPathParser.DECIMAL_VALUE]:
                        self.state = 87
                        localctx.rlit = self.literal()
                        pass
                    elif token in [XPathParser.T__0, XPathParser.T__3, XPathParser.ASTERISK, XPathParser.SLASH, XPathParser.ATTRIBUTE, XPathParser.IDENTIFIER]:
                        self.state = 88
                        localctx.stmt = self.innerStatement()
                        pass
                    else:
                        raise NoViableAltException(self)



                self.state = 93
                self.match(XPathParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(XPathParser.T__1)
                self.state = 96
                localctx.llit = self.literal()
                self.state = 97
                localctx.op = self.comparisonOperator()
                self.state = 100
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [XPathParser.MINUS, XPathParser.TRUE, XPathParser.FALSE, XPathParser.NULL, XPathParser.STRING, XPathParser.INTEGER_VALUE, XPathParser.DECIMAL_VALUE]:
                    self.state = 98
                    localctx.rlit = self.literal()
                    pass
                elif token in [XPathParser.T__0, XPathParser.T__3, XPathParser.ASTERISK, XPathParser.SLASH, XPathParser.ATTRIBUTE, XPathParser.IDENTIFIER]:
                    self.state = 99
                    localctx.stmt = self.innerStatement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self.match(XPathParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.index = None # Token

        def INTEGER_VALUE(self):
            return self.getToken(XPathParser.INTEGER_VALUE, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_indexSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexSelector" ):
                listener.enterIndexSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexSelector" ):
                listener.exitIndexSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexSelector" ):
                return visitor.visitIndexSelector(self)
            else:
                return visitor.visitChildren(self)




    def indexSelector(self):

        localctx = XPathParser.IndexSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_indexSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(XPathParser.T__1)
            self.state = 107
            localctx.index = self.match(XPathParser.INTEGER_VALUE)
            self.state = 108
            self.match(XPathParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllSelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def allAttributes(self):
            return self.getTypedRuleContext(XPathParser.AllAttributesContext,0)


        def allNodes(self):
            return self.getTypedRuleContext(XPathParser.AllNodesContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_allSelect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllSelect" ):
                listener.enterAllSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllSelect" ):
                listener.exitAllSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllSelect" ):
                return visitor.visitAllSelect(self)
            else:
                return visitor.visitChildren(self)




    def allSelect(self):

        localctx = XPathParser.AllSelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_allSelect)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.allAttributes()
                pass
            elif token in [XPathParser.ASTERISK]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.allNodes()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllNodesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(XPathParser.ASTERISK, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allNodes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllNodes" ):
                listener.enterAllNodes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllNodes" ):
                listener.exitAllNodes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllNodes" ):
                return visitor.visitAllNodes(self)
            else:
                return visitor.visitChildren(self)




    def allNodes(self):

        localctx = XPathParser.AllNodesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_allNodes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(XPathParser.ASTERISK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllAttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XPathParser.RULE_allAttributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllAttributes" ):
                listener.enterAllAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllAttributes" ):
                listener.exitAllAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllAttributes" ):
                return visitor.visitAllAttributes(self)
            else:
                return visitor.visitChildren(self)




    def allAttributes(self):

        localctx = XPathParser.AllAttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_allAttributes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(XPathParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(XPathParser.EQ, 0)

        def NEQ(self):
            return self.getToken(XPathParser.NEQ, 0)

        def NEQJ(self):
            return self.getToken(XPathParser.NEQJ, 0)

        def LT(self):
            return self.getToken(XPathParser.LT, 0)

        def LTE(self):
            return self.getToken(XPathParser.LTE, 0)

        def GT(self):
            return self.getToken(XPathParser.GT, 0)

        def GTE(self):
            return self.getToken(XPathParser.GTE, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonOperator" ):
                return visitor.visitComparisonOperator(self)
            else:
                return visitor.visitChildren(self)




    def comparisonOperator(self):

        localctx = XPathParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XPathParser.EQ) | (1 << XPathParser.NEQ) | (1 << XPathParser.NEQJ) | (1 << XPathParser.LT) | (1 << XPathParser.LTE) | (1 << XPathParser.GT) | (1 << XPathParser.GTE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(XPathParser.TRUE, 0)
